--- a/index.html
+++ b/index.html
@@ -138,35 +138,30 @@ h6:before{color:silver;counter-increment:more-detail;content:var(--heading-prefi
     <!-- ReleaseHeader --><p id="publish-box">TBD - Local Development build (v0.0.1). See the <a href="https://ghit42796.github.io/fhir_test/index.html/history.html">Directory of published versions</a></p>  <!-- EndReleaseHeader -->
   <h2>MyIG Home Page</h2>
   
-  <div><div class="markdown-toc"><p>Contents:</p><ul><li><a href="#intro">Introduction</a></li><li><a href="#technical">Technical Overview</a></li></ul></div>
+  <div><div class="markdown-toc"><p>Contents:</p><ul><li><a href="#intro">背景</a></li><li><a href="#technical">技術說明</a></li></ul></div>
     <!-- The spaces between the open and close "a" tag are mandatory.  (Cuz HTML renderers are dumb...) -->
   <a name="intro">  </a>
-  <h3>Introduction</h3>
+  <h3>背景</h3>
 	<p>
-    What is this IG about (in patient/non-expert friendly terms).
+    國內的需求
+  </p>
+  <p>
+    使用情境
   </p>
 	<a name="technical">  </a>
-	<h3>Technical Overview</h3>
+	<h3>技術說明</h3>
 	<p>
-    Additional detail/context setting for those who have significant background in the domain.  (Try to make as understandable as you can, but
-    set important context).
+    驗證工具
   </p>
-  <a name="walkthrough">  </a>
   <p>
-    The main sections of this IG are:
+    IG定義檔
   </p>
-  <ul>
-    <li>
-      <a href="background.html">Background</a> - provides business context for the implementation guide and information that implementers should be
-      familiar with before reading the remainder of the IG.  There could be multiple pages for this.
-    </li>
-    <li>
-      <a href="spec.html">Detailed Specification</a> - The actual stuff implementers are expected to do.  (Could be multiple pages for this.)
-    </li>
-    <li>
-      <a href="downloads.html">Downloads</a> - Allows downloading a copy of this implementation guide and other useful information
-    </li>
-  </ul>
+  <p>
+    Resource欄位及值域
+  </p>
+  <p>
+    範例
+  </p>
 </div>
 </div>
         </div>    <!-- /inner-wrapper -->
@@ -187,8 +182,8 @@ h6:before{color:silver;counter-increment:more-detail;content:var(--heading-prefi
   <div igtool="footer" id="segment-footer" class="segment">    <!-- segment-footer -->
     <div class="container">    <!-- container -->
       <div class="inner-wrapper">
-        <p><a name="ee0ef69b-3a12-4f74-b45e-88e444ec35b0">​</a>
-          IG &copy; 2019+ <a style="color: #81BEF7" href="TBD">TBD</a>.  Package example.fhir.TBD#0.0.1 based on <a style="color: #81BEF7" href="http://hl7.org/fhir/R4/">FHIR 4.0.1</a>. Generated <span title="Mon, Apr 26, 2021 11:38+0800">2021-04-26</span>
+        <p><a name="7af55aaa-da25-4550-85e7-94eefbe9b75a">​</a>
+          IG &copy; 2019+ <a style="color: #81BEF7" href="TBD">TBD</a>.  Package example.fhir.TBD#0.0.1 based on <a style="color: #81BEF7" href="http://hl7.org/fhir/R4/">FHIR 4.0.1</a>. Generated <span title="Tue, Apr 27, 2021 16:06+0800">2021-04-27</span>
           <br/>
           <span style="color: #FFFF77">
                       Links: <a style="color: #81BEF7" href="toc.html">Table of Contents</a> |
