--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
       }
     </style>
     <meta http-equiv="Content-Type" content="text/html;charset=utf-8"/>
-    <title>EXAMPLE.FHIR.TBD\MyIG Home Page - FHIR v4.0.1</title>
+    <title>EXAMPLE.FHIR.TAIWANSMARTCERTIFICATE\MyIG Home Page - FHIR v4.0.1</title>
 
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <meta name="author" content="http://hl7.org/fhir"/>
@@ -52,7 +52,7 @@
 
 
         <div id="ig-status">
-          <p><span style="font-size:12pt;font-weight:bold">TBD</span><br/>0.0.1 - CI Build</p>
+          <p><span style="font-size:12pt;font-weight:bold">Taiwan Smart Certificate</span><br/>0.0.1 - CI Build</p>
         </div>
       </div>   <!-- /container -->
     </div>    <!-- /segment-header -->
@@ -139,7 +139,7 @@ h5:before{color:silver;counter-increment:detail;content:var(--heading-prefix) ".
 h6:before{color:silver;counter-increment:more-detail;content:var(--heading-prefix) "." counter(sub-section) "." counter(composite) "." counter(detail) "." counter(more-detail)" ";}
 </style>
 <div class="col-12">
-    <!-- ReleaseHeader --><p id="publish-box">TBD - Local Development build (v0.0.1). See the <a href="https://ghit42796.github.io/fhir_test/index.html/history.html">Directory of published versions</a></p>  <!-- EndReleaseHeader -->
+    <!-- ReleaseHeader --><p id="publish-box">Taiwan Smart Certificate - Local Development build (v0.0.1). See the <a href="https://ghit42796.github.io/fhir_test/index.html/history.html">Directory of published versions</a></p>  <!-- EndReleaseHeader -->
   <h2>MyIG Home Page</h2>
   
   <div>
@@ -463,7 +463,7 @@ h6:before{color:silver;counter-increment:more-detail;content:var(--heading-prefi
     <div class="container">    <!-- container -->
       <div class="inner-wrapper">
         <p><a name="f79902e1-1855-4863-9118-7dff5574ccb5">​</a>
-          IG &copy; 2019+ <a style="color: #81BEF7" href="TBD">TBD</a>.  Package example.fhir.TBD#0.0.1 based on <a style="color: #81BEF7" href="http://hl7.org/fhir/R4/">FHIR 4.0.1</a>. Generated <span title="Thu, May 13, 2021 13:22+0800">2021-05-13</span>
+          IG &copy; 2019+ <a style="color: #81BEF7" href="https://ghit42796.github.io/fhir_test/index.html">Taiwan Smart Certificate</a>.  Package example.fhir.TAIWANSMARTCERTIFICATE#0.0.1 based on <a style="color: #81BEF7" href="http://hl7.org/fhir/R4/">FHIR 4.0.1</a>. Generated <span title="Thu, May 13, 2021 13:22+0800">2021-05-13</span>
           <br/>
           <span style="color: #FFFF77">
                       Links: <a style="color: #81BEF7" href="toc.html">Table of Contents</a> |
