--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@ h6:before{color:silver;counter-increment:more-detail;content:var(--heading-prefi
   <a name="intro">  </a>
   <div>
   <p>
-    <strong>臺灣數位疫苗接種證明交換格式說明 (ver. 0.3)</strong>
+    <strong>臺灣數位疫苗接種證明交換格式說明</strong>
   </p>
   <p>
     <strong>此為台灣數位疫苗接種證明的FHIR實施指南</strong>
